Stop repl from jumping around in the mac app

--- a/backend/sass/common.blocks/_pane.scss
+++ b/backend/sass/common.blocks/_pane.scss
@@ -42,3 +42,7 @@
   height: auto;
 }
 
+// Prevent the repl from jumping around in the mac app
+.pane__body_heightfix {
+  height: auto !important;
+}
